[project]
name = "crewai_enterprise_content_marketing_ideas"
version = "0.1.0"
description = "crewai-enterprise-content-marketing using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.2",
]

[project.scripts]
crewai_enterprise_content_marketing_ideas = "crewai_enterprise_content_marketing_ideas.main:run"
run_crew = "crewai_enterprise_content_marketing_ideas.main:run"
train = "crewai_enterprise_content_marketing_ideas.main:train"
replay = "crewai_enterprise_content_marketing_ideas.main:replay"
test = "crewai_enterprise_content_marketing_ideas.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
